--- a/docs/client/02. CSS.md
+++ b/docs/client/02. CSS.md
@@ -449,7 +449,333 @@ HTML 파일
 
 ###### 박스 모델
 
-![Alt text](../../images/border.png)
+- HTML 요소는 박스 모양으로 구성되며, 이것을 박스 모델이라 부름
+- 박스 모델은 패딩(padding), 테두리(border), 마진(margin), 그리고 내용(content)으로 구분
+  ![Alt text](../images/border.png)
+
+| 용어           | 의미                                                 |
+| -------------- | ---------------------------------------------------- |
+| 내용(content)  | 텍스트나 이미지가 들어있는 박스의 실질적인 내용 부분 |
+| 패딩(padding)  | 내용과 테두리 사이의 간격, 눈에 보이지 않음          |
+| 테두리(border) | 내용과 패딩 주변을 감싸는 테두리                     |
+| 마진(margin)   | 테두리와 이웃하는 요소 사이의 간격, 눈에 보이지 않음 |
+
+<textarea class="css-code" placeholder="Enter CSS source">
+div.first {
+  width: 195px;
+  height: 195px;
+  border: 5px solid red;
+}
+div.second {
+  width: 95px;
+  height: 195px;
+  padding: 0px 50px;
+  border: 5px solid blue;
+}
+div.third {
+  width: 195;
+  height: 195px;
+  margin-top: 50px;
+  border: 5px solid green;
+}
+</textarea>
+
+HTML 파일
+
+<textarea class="html-code" placeholder="Enter HTML Source Code">
+<div class="first">이 div는 width 195 + border 5 = 가로 200px 입니다.</div>
+<div class="second">이 div는 width 95 + padding 100(좌우 50씩) + border 5 = 가로 200px입니다.</div>
+<div class="third">이 div는 width 195 + border 5 = 가로 200px 입니다. margin은 content에 영향을 주지 않습니다. <br />하지만, margin으로 인해 border 밖 부분에 50px의 공간이 생깁니다.</div>
+</textarea>
+  <button class="btn">실행</button>
+<iframe class="frame"></iframe>
+
+#### 4. CSS 위치 속성
+
+###### 디스플레이
+
+- 웹 페이지의 레이아웃을 결정하는 CSS의 중요한 속성 중 하나
+- HTML 요소가 웹 브라우저에 어떻게 보이는가를 결정
+
+      - 블록(block)
+      - 인라인(inline)
+
+- 블록(block)
+
+      - 블록인 요소는 언제나 새로운 라인에서 시작하며, 해당 라인의 모든 너비(width)를 차지
+      - div, h1, p, ul, ol, form 요소는 대표적인 블록 요소
+
+- 인라인(inline)
+
+      - 인라인 요소는 새로운 라인에서 시작하지 않음
+      - 요소의 너비(width)도 해당 라인 전체가 아닌 해당 HTML 요소의 내용(content)만큼 차지
+
+<textarea class="css-code" placeholder="Enter CSS source">
+li {
+  display: inline;
+}
+</textarea>
+
+HTML 파일
+
+<textarea class="html-code" placeholder="Enter HTML Source Code">
+<ul class="circle">
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>JavaScript</li>
+</ul>
+</textarea>
+  <button class="btn">실행</button>
+<iframe class="frame"></iframe>
+
+- 인라인 블록(inline-block)
+
+      - 인라인-블록으로 설정된 요소들은 인라인 요소처럼 한 줄로 늘어서게 되며, 동시에 블록 요소처럼 너비와 높이를 설정할 수 있음
+
+<textarea class="css-code" placeholder="Enter CSS source">
+div { 
+  width: 100px; 
+  height: 50px; 
+}
+.first { 
+  background-color: aqua; 
+}
+.second { 
+  background-color: green; 
+}
+.third { 
+  background-color: yellow;
+}
+.inline { 
+  display: inline; 
+}
+.inline-block { 
+  display: inline-block; 
+}
+</textarea>
+
+HTML 파일
+
+<textarea class="html-code" placeholder="Enter HTML Source Code">
+<p>아래에 나오는 div 요소는 모두 display 속성값이 블록입니다.</p>
+<div class="first">블록</div>
+<div class="second">블록</div>
+<div class="third">블록</div><br>
+
+<p>아래에 나오는 div 요소는 모두 display 속성값이 인라인입니다.</p>
+<div class="first inline">인라인</div>
+<div class="second inline">인라인</div>
+<div class="third inline">인라인</div><br><br>
+
+<p>아래에 나오는 div 요소는 모두 display 속성값이 인라인-블록입니다.</p>
+<div class="first inline-block">인라인-블록</div>
+<div class="second inline-block">인라인-블록</div>
+<div class="third inline-block">인라인-블록</div>
+</textarea>
+  <button class="btn">실행</button>
+<iframe class="frame"></iframe>
+
+###### 포지션
+
+- HTML 요소가 위치를 결정하는 방식을 설정
+- CSS에서 요소의 위치를 결정하는 방식은 4가지 방식이 있음
+
+  | 포지션              | 의미                                                                                                                          |
+  | ------------------- | ----------------------------------------------------------------------------------------------------------------------------- |
+  | 정적(static) 위치   | 가장 기본적인 방식, 단순 웹 페이지의 흐름에 따라 차례대로 요소들을 위치시키는 방식                                            |
+  | 상대(relative) 위치 | HTML 요소의 기본 위치를 기준으로 상대적인 위치를 지정하는 방식                                                                |
+  | 고정(fixed) 위치    | 뷰포트(viewport)를 기준으로 위치를 설정하는 방식 <br />웹 페이지가 스크롤 되어도 고정 위치로 지정된 요소는 항상 같은곳에 위치 |
+  | 절대(absoltue) 위치 | 고정 위치와 비슷하지만, 뷰포트(viewport)를 기준으로 하는것이 아닌 위치가 설정된 조상(ancestor) 요소를 기준으로 위치를 설정    |
+
+<textarea class="css-code" placeholder="Enter CSS source">
+div {
+  border: 2px solid red;
+  width: 90%;
+  margin: 10px 0;
+}
+.static {
+  position: static;
+}
+.relative {
+  position: relative;
+  left: 30px;
+}
+.fixed {
+  position: fixed;
+  width: 500px;
+}
+.absolute {
+  position: absolute;
+  border: 2px solid #006400 !important;
+  width: 200px;
+  height: 100px;
+  right: 0;
+  top: 100px;
+}
+.relative-box {
+  width: 500px !important;
+  height: 300px !important;
+  position: relative;
+  border: 2px solid #B8860B !important;
+}
+</textarea>
+
+HTML 파일
+
+<textarea class="html-code" placeholder="Enter HTML Source Code">
+<div class="static">이 요소는 정적 위치 지정 방식으로 위치를 설정하였습니다.</div>
+<div class="relative">이 요소는 상대 위치 지정 방식으로 위치를 설정한 후, left 속성값을 30px로 설정하였습니다.</div>
+<div class="relative-box">이 요소는 상대 위치 지정 방식으로 위치를 설정하였습니다.
+  <div class="fixed">이 요소는 고정 위치 지정 방식으로 위치를 설정하였습니다. 스크롤을 내려도 위치가 고정됩니다!</div>
+  <div class="absolute">이 요소는 절대 위치 지정 방식으로 위치를 설정한 후, top 속성값을 50px로 설정하였습니다.</div>
+</div>
+<div class="absolute">이 요소는 절대 위치 지정 방식으로 위치를 설정한 후, top 속성값을 50px로 설정하였습니다.</div>
+<p>절대 위치는 해당 요소의 바로 상위의 위치가 설정된 조상(ancestor) 요소에 따라 위치를 재조정하는 방식입니다!</p>
+</textarea>
+  <button class="btn">실행</button>
+<iframe class="frame"></iframe>
+
+#### 5. 선택자
+
+###### 선택자(selector)
+
+- 스타일을 적용할 대상을 선택하기 위해 선택자를 사용
+- 기본적인 선택자는 다음과 같음
+
+| 선택자                | 의미                                                                     |
+| --------------------- | ------------------------------------------------------------------------ |
+| 전체 선택자(\*)       | CSS를 적용할 대상으로 HTML 문서 내부의 모든 요소를 선택                  |
+| HTML 요소 선택자(tag) | CSS를 적용할 대상으로 HTML 요소의 이름을 직접 사용하여 선택              |
+| 아이디 선택자(#)      | CSS를 적용할 대상으로 요소 중 특정 아이디 이름만 가지는 요소만을 선택    |
+| 클래스 선택자(.)      | CSS 적용할 대상으로 요소 중 같은 클래스 이름을 가지는 요소들을 모두 선택 |
+| 그룹 선택자(,)        | 여러 선택자를 같이 사용하고자 할 떄 사용                                 |
+
+<textarea class="css-code" placeholder="Enter CSS source">
+* {
+  color: red;
+}
+div {
+  border: 2px solid blue;
+}
+#header {
+  text-decoration: underline;
+  font-size: 1.8em;
+}
+.item {
+  text-decoration: line-through;
+}
+h2, h3 {
+  text-align: center;
+}
+</textarea>
+
+HTML 파일
+
+<textarea class="html-code" placeholder="Enter HTML Source Code">
+<h1 id="header">이 문서의 헤더 부분입니다.</h1>
+<h2>h2 태그는 가운데 정렬입니다.</h2>
+<h3>h3 태그또한 가운데 정렬입니다.</h3>
+<ul>
+  <li class="item">아이템 1</li>
+  <li class="item">아이템 2</li>
+  <li class="item">아이템 3</li>
+</ul>
+
+<div>전체 선택자로 인해 모든 텍스트가 빨간색입니다!</div>
+</textarea>
+  <button class="btn">실행</button>
+<iframe class="frame"></iframe>
+
+###### 결합 선택자
+
+- 결합 선택자는 연관된 선택자들 간의 관계를 설정
+- 관계는 크게 자손(descendant), 자식(child) 관계가 존재
+
+- 자손 선택자
+
+      - 하위 요소 중에서 특정 타입의 요소를 모두 선택
+      - `E E1 {style code}` 와 같이 사용
+
+- 자식 선택자
+
+      - 바로 밑에 존재하는 하위 요소 중에서 특정 타입의 요소를 모두 선택
+      - `E > E1 {style code}`와 같이 사용
+
+<textarea class="css-code" placeholder="Enter CSS source">
+div p {
+  border: 2px solid red;
+}
+ul > li {
+  color: blue;
+}
+</textarea>
+
+HTML 파일
+
+<textarea class="html-code" placeholder="Enter HTML Source Code">
+<p>자손 선택자로 인해 div 외부의 p 태그는 선택되지 않습니다.</p>
+<div>
+  <p>결합 선택자 예제 입니다!</p>
+  <p>div 내부의 p 태그는 선택되었습니다!</p>
+  <big><p>div 내부의 big 내부의 p 태그 또한 선택되었습니다!</p></big>
+</div>
+<ul>
+  <li>아이템 1</li>
+  <li>아이템 2</li>
+  <ol>
+    <div>자식 선택자로 인해 ul 내부의 ol 내부의 li는 선택되지 않습니다.</div>
+    <li>아이템 3</li>
+    <li>아이템 4</li>
+    <li>아이템 5</li>
+  </ol>
+</ul>
+</textarea>
+  <button class="btn">실행</button>
+<iframe class="frame"></iframe>
+
+###### 동위 선택자
+
+- 동위 관계에 있는 요소 중에서 해당 요소보다 뒤에 존재하는 특정 타입의 요소를 모두 선택
+- 아래 그림에서, 초록색으로 표시된 세 요소 모두 body 요소를 부모로 가짐
+
+      - 따라서 이 세 요소는 동위 관계에 있는 `형제 요소`
+
+  ![Alt Text](../images/sibling-selectormage.png)
+
+- 일반 동위 선택자
+
+      - 동위 관계이며, 해당 요소보다 뒤에 존재하는 특정 타입의 요소를 모두 선택
+      - `E ~ E2 {style code}`와 같이 사용
+
+- 인접 동위 선택자
+
+      - 동위 관계이며, 해당 요소의 바로 뒤에 존재하는 특정 타입의 요소를 모두 선택
+
+<textarea class="css-code" placeholder="Enter CSS source">
+div {
+  border: 3px solid #F08080;
+}
+div ~ p {
+  background-color: #FFE4E1;
+}
+div + p {
+  color: blue;
+}
+</textarea>
+
+HTML 파일
+
+<textarea class="html-code" placeholder="Enter HTML Source Code">
+<div>
+  <p>div의 자식 태그 P태그</p>
+</div>
+<p>div 태그의 인접 동위 관계 이며, 일반 동위 관계</p>
+<p>div태그의 일반 동위 관계</p>
+</textarea>
+  <button class="btn">실행</button>
+<iframe class="frame"></iframe>
+
+###### 의사 선택자
 
 <script>
   const htmlCodes = document.querySelectorAll("textarea.html-code");
@@ -506,7 +832,6 @@ frames[index].srcdoc = `
 </body>
 </html>`;
     });
-
 });
 
 </script>
